<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Timetable</string>
    <string name="app_prefs">Timetable Preferences</string>
    <string name="about">About Application</string>
    <string name="about_app">About Timetable application</string>
    <string name="selectlanguage">Select Language</string>
	<string name="language">Language</string>
	<string name="refresh">Refresh</string>
	<string name="settings">Settings</string>
	<string name="generalsettings">General Settings</string>
	<string name="lookandfeel">Look and Feel</string>
	<string name="selecttheme">Select application theme</string>
	<string name="apptheme">Main Theme</string>
	<string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="category_general">general</string>
    <string name="category_look">look</string>
    <string name="category_theme">theme</string>
   	<string name="selectcolorscheme">Select application color scheme</string>
	<string name="appcolortheme">Main Color Scheme</string>
	<string name="working">Working&#8230;</string>
	<string name="retrieving">Retrieving data&#8230;</string>
	<string name="theme_colors">Theme and Colors</string>
	<string name="configurethemeandcolors">Configure theme and colors</string>
	<string name="new_item">New Item</string>
	<string name="insert_item">Insert Item</string>
	<string name="delete_item">Delete Item</string>
	<string name="select_class">Class</string>
	<string name="start">Start</string>
	<string name="end">End</string>
	<string name="description">Description</string>
	<string name="new_class">New Class</string>
	<string name="edit_class">Edit Class</string>	
	
	<string name="asb_switch_on">ON</string>
    <string name="asb_switch_off">OFF</string>
		
   	<string name="black">Black</string>
   	<string name="white">White</string>
   	<string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="deep_purple">Deep Purple</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light Blue</string>
    <string name="cyan">Cyan</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="light_green">Light Green</string>
    <string name="lime">Lime</string>
    <string name="yellow">Yellow</string>
    <string name="amber">Amber</string>
    <string name="orange">Orange</string>
    <string name="deep_orange">Deep Orange</string>
    <string name="brown">Brown</string>
    <string name="grey">Grey</string>
    <string name="blue_grey">Blue Grey</string>   	
    
    <string name="label_dark">Dark</string>
    <string name="label_light">Light</string>
    
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    
    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>    
</resources>
